# redmod

./: Cargo.toml  build.rs
benches/: benchmarks.rs
c/: lz4.c  lz4.h  lz4frame.c  lz4frame.h  lz4frame_static.h  rax.c  rax.h  rax_ext.c  rax_ext.h  sds.c  sds.h  sds_ext.c  server.c  server.h  stream.c  stream_ext.c  stream_ext.h  xxhash.c  xxhash.h
src/: error.rs  key.rs  lib.rs  listpack.rs  macros.rs  main.rs  mod_api.rs  rax.rs  redis.rs  sds.rs  stream.rs
src/sliced/: mod.rs
