[package]
name = "red_mod"
version = "0.1.0"
authors = ["Clay Molocznik <clay@mojo.run>"]
build = "build.rs"

[lib]
bench = false
#[lib]
#crate-type = ["dylib"]

[dependencies]
libc = "0.2"
futures = "0.1.17"
#jemallocator = "0.1"
time = "0.1"
bitflags = "1.0"
arrayvec = "0.4.7"
byteorder = "1"
bencher = "0.1.5"
stopwatch = "0.0.7"
#lazy_static = "1.0"
#dlopen = "0.1.4"
#dlopen_derive = "0.1.2"

[dev-dependencies]
criterion = "0.2"
bencher = "0.1.5"

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
gcc = "0.3"